--- a/index.html
+++ b/index.html
@@ -37,44 +37,19 @@
                     </svg>+38 096 111 11 11
                 </a>
             </div>
-            <script>
-                const { height: pageHeaderHeight } = document
-                    .querySelector( ".page-header" )
-                    .getBoundingClientRect();
-                document.body.style.paddingTop = `${pageHeaderHeight}px`;
-            </script>
         </div>
     </header>
     <main class="main"> 
         <section class="header-overlay hero-section section">
             <div class="container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="hero-btn button" data-open-modal>Замовити послугу</button>
+                <button type="button" class="hero-btn button heartbeat" data-open-modal>Замовити послугу</button>
             </div>
             <div class="backdrop is-hidden" data-backdrop>
                 <div class="modal">
                     <button type="button" class="modal-close-btn" data-close-modal ><img src="./images/Close.png" alt="close" width="11" height="11"></button>
                 </div>
             </div>
-            <script>
-                const refs = {
-                    openModalBtn: document.querySelector("[data-open-modal]"),
-                    closeModalBtn: document.querySelector("[data-close-modal]"),
-                    backdrop: document.querySelector("[data-backdrop]"),
-                };
-
-                refs.openModalBtn.addEventListener("click", toggleModal);
-                refs.closeModalBtn.addEventListener("click", toggleModal);
-
-                refs.backdrop.addEventListener("click", logBackdropClick);
-
-                function toggleModal() {
-                    refs.backdrop.classList.toggle("is-hidden");
-                }
-                function logBackdropClick () {
-                    console.log("Це клік в бекдроп")
-                }
-            </script>    
         </section>
         <section class="advantages-section section">
             <div class="container">
@@ -394,6 +369,8 @@
                 </ul>
             </div>
         </div>
-    </footer>   
+    </footer>
+    <script src="./js/header-scroll.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
