--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,16 @@
                     </li>
                 </ul>
             </div>
+            <div class="">
+                <form class="form-sign" action="">
+                    <p class="h3-like mb20px">Підпишіться на розсилку</p>
+                    <div class="form-sign-field">
+                        <input class="form-sign-input" type="email" name="email" id="email" placeholder=" ">
+                        <label class="form-sign-label" for="email">E-mail</label>
+                        <button class="hero-btn button" type="submit">Підписатися</button>
+                    </div> 
+                </form>
+            </div>
         </div>
     </footer>
 </body>
