--- a/index.html
+++ b/index.html
@@ -45,45 +45,6 @@
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero-btn button heartbeat" data-open-modal>Замовити послугу</button>
             </div>
-            <div class="backdrop is-hidden" data-backdrop>
-                <div class="modal">
-                    <button type="button" class="modal-close-btn" data-close-modal ><img src="./images/Close.png" alt="close" width="11" height="11"></button>
-                    <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
-                    <form class="modal-form">
-                        <div class="modal-form-group" role="group">
-                            <label class="modal-form-label" for="user_name">Ім'я</label>
-                            <div class="modal-form-wrapper">
-                                <input class="modal-form-field" type="text" name="user_name" id="user_name">
-                                <svg class="modal-form-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#"></use>
-                                </svg>
-                            </div>
-                            <label class="modal-form-label" for="user_phone">Телефон</label>
-                            <div class="modal-form-wrapper">
-                                <input class="modal-form-field" type="tel" name="user_phone" id="user_phone">
-                                <svg class="modal-form-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#icon-smartphone"></use>
-                                </svg>
-                            </div>
-                            <label class="modal-form-label" for="user_email">Пошта</label>
-                            <div class="modal-form-wrapper">
-                                <input class="modal-form-field" type="email" name="user_email" id="user_email">
-                                <svg class="modal-form-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#icon-envelope"></use>
-                                </svg>
-                            </div>
-                            <label class="modal-form-label" for="user_comment">Коментар</label>
-                            <br>
-                            <textarea class="modal-form-comment" name="user_comment" placeholder="Введіть текст" id="user_comment" cols="30" rows="7"></textarea>
-                        </div>
-                        <div class="" role="group">
-                            <input class="modal-form-field" type="checkbox" name="user_agreement" id="user_agreement">
-                            <label class="modal-form-agreement"for="user_agreement">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a></label> 
-                            <button class="hero-btn button" type="submit">Відправити</button> 
-                        </div>
-                    </form>    
-                </div>
-            </div>
         </section>
         <section class="advantages-section section">
             <div class="container">
@@ -404,14 +365,78 @@
             </div>
             <div class="">
                 <form class="form-sign" action="">
-                    <h3 class="h3-like mb20px">Підпишіться на розсилку</h3>
-                    <input class="form-sign-field" type="email" placeholder="E-mail" name="email" id="email">
-                    <button class="hero-btn button" type="submit">Підписатися</button> 
+                    <p class="h3-like mb20px">Підпишіться на розсилку</p>
+                    <div class="form-sign-field">
+                        <input class="form-sign-input" type="email" name="email" id="email" placeholder=" ">
+                        <label class="form-sign-label" for="email">E-mail</label>
+                        <button class="hero-btn button" type="submit">Підписатися</button>
+                    </div> 
                 </form>
             </div>
         </div>
     </footer>
+    <!-- MODAL WINDOW -->
+    <div class="backdrop is-hidden" data-backdrop>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-close-modal >
+                <svg class="modal-form-close" width="11" height="11">
+                    <use href="./images/icons.svg#close-btn"></use>
+                </svg></button>
+            <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+            <form class="modal-form">
+                <div class="modal-form-group" role="group">
+                    <label class="modal-form-label" for="user_name">Ім'я</label>
+                    <div class="modal-form-wrapper">
+                        <input class="modal-form-field" type="text" name="user_name" id="user_name">
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#person-modal"></use>
+                        </svg>
+                    </div>
+                    <label class="modal-form-label" for="user_phone">Телефон</label>
+                    <div class="modal-form-wrapper">
+                        <input class="modal-form-field" type="tel" name="user_phone" id="user_phone">
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#phone-modal"></use>
+                        </svg>
+                    </div>
+                    <label class="modal-form-label" for="user_email">Пошта</label>
+                    <div class="modal-form-wrapper">
+                        <input class="modal-form-field" type="email" name="user_email" id="user_email">
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#email-modal"></use>
+                        </svg>
+                    </div>
+                    <label class="modal-form-label" for="user_comment">Коментар</label>
+                    <textarea class="modal-form-comment" name="user_comment" placeholder="Введіть текст" id="user_comment" cols="30" rows="7"></textarea>
+                </div>
+                <div class="modal-form-agreement" role="group">
+                    <input class="modal-form-checkbox" type="checkbox" name="user_agreement" id="user_agreement">
+                    <label class="modal-form-agreement-desc" for="user_agreement">Погоджуюся з розсилкою та приймаю <a class="modal-form-agreement-link" href="">Умови договору</a></label>
+                </div>
+                <button class="hero-btn button modal-form-btn" type="submit">Відправити</button>
+            </form>    
+        </div>
+    </div>
+        <!-- MODAL WINDOW END-->
     <script src="./js/header-scroll.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
+
+<!-- FORM STYLES -->
+    <!-- <form class="modal-form">
+        <div class="modal-form-field">
+            <input class="form-input" type="text" id="user-name" placeholder=" ">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <span class="icon"></span>
+        </div>
+        <div class="modal-form-field">
+            <input class="form-input" type="tel" id="user-phone" placeholder=" ">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <span class="icon"></span>
+        </div>
+        <div class="modal-form-field">
+            <input class="form-input" type="email" id="user-email" placeholder=" ">
+            <label class="modal-form-label" for="user-email">eMail</label>
+            <span class="icon"></span>
+        </div> --> -->
